{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 226,
  "lineage": "d7d7786c-3991-03ec-a2fb-265dfed3429f",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "DS_master_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0f540e9f488cfa27d",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-0b94091f8b0c74ac9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "sskeu1_Master01_Node"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0b94091f8b0c74ac9",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "key_name": "sskeu1_prv_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0af05e204ddd5d161",
            "private_dns": "ip-10-0-1-174.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.174",
            "public_ip": "13.40.8.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bfb6c390dae80b45",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09198194a91ba312e",
            "tags": {
              "Name": "sskeu1_Master01_Node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0280e73b3c0102b0b"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "DS_master_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0f540e9f488cfa27d",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-04f85058e790b0751",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "sskeu1_Master02_Node"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-04f85058e790b0751",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "key_name": "sskeu1_prv_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0d142c0fd405dcb30",
            "private_dns": "ip-10-0-1-212.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.212",
            "public_ip": "35.176.138.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-023e7db18b3eef704",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09198194a91ba312e",
            "tags": {
              "Name": "sskeu1_Master02_Node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0280e73b3c0102b0b"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "DS_worker_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0f540e9f488cfa27d",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-0c4baa9de514d5b5a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "sskeu1_Worker01_Node"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0c4baa9de514d5b5a",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "key_name": "sskeu1_prv_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0d24bcd61642908d0",
            "private_dns": "ip-10-0-1-70.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.70",
            "public_ip": "18.132.43.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c96d43ca5bee6ccb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09198194a91ba312e",
            "tags": {
              "Name": "sskeu1_Worker01_Node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ee017a00e336ad6d"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "DS_worker_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0f540e9f488cfa27d",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-048782af943bb1153",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "sskeu1_Worker02_Node"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-048782af943bb1153",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "key_name": "sskeu1_prv_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0e41674e068a58d5b",
            "private_dns": "ip-10-0-1-64.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.64",
            "public_ip": "35.177.104.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01753429fbbb63b4f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09198194a91ba312e",
            "tags": {
              "Name": "sskeu1_Worker02_Node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ee017a00e336ad6d"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "sskeu1_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066101ea7ec5d5312",
            "association_id": "eipassoc-093eee43274e63f6f",
            "domain": "vpc",
            "id": "eipalloc-066101ea7ec5d5312",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-06775e41b07f1e9b9",
            "private_dns": "ip-10-0-1-119.eu-west-2.compute.internal",
            "private_ip": "10.0.1.119",
            "public_dns": "ec2-52-56-234-151.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.234.151",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sskeu1_nat_eip"
            },
            "tags_all": {
              "Name": "sskeu1_nat_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sskeu1_Bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f540e9f488cfa27d",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-0952e9eda48a2052e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0952e9eda48a2052e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "sskeu1_prv_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04cebb8f11d90c2d9",
            "private_dns": "ip-10-0-1-11.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.11",
            "public_ip": "18.170.86.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0faa8b5aa87329a78",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09198194a91ba312e",
            "tags": {
              "name": "sskeu1_Bastion_host"
            },
            "tags_all": {
              "name": "sskeu1_Bastion_host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-006f599c9a71718e2"
            ]
          },
          "dependencies": [
            "aws_key_pair.sskeu1_prv_pub_key",
            "aws_security_group.sskeu1_Bastion_sg",
            "aws_subnet.sskeu1_pubsn_01",
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sskeu1_Master01_Node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f540e9f488cfa27d",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-0b94091f8b0c74ac9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b94091f8b0c74ac9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "sskeu1_prv_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0af05e204ddd5d161",
            "private_dns": "ip-10-0-1-174.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.174",
            "public_ip": "13.40.8.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bfb6c390dae80b45",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09198194a91ba312e",
            "tags": {
              "Name": "sskeu1_Master01_Node"
            },
            "tags_all": {
              "Name": "sskeu1_Master01_Node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0280e73b3c0102b0b"
            ]
          },
          "dependencies": [
            "aws_key_pair.sskeu1_prv_pub_key",
            "aws_security_group.sskeu1_Master_sg",
            "aws_subnet.sskeu1_pubsn_01",
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sskeu1_Master02_Node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f540e9f488cfa27d",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-04f85058e790b0751",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f85058e790b0751",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "sskeu1_prv_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d142c0fd405dcb30",
            "private_dns": "ip-10-0-1-212.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.212",
            "public_ip": "35.176.138.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-023e7db18b3eef704",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09198194a91ba312e",
            "tags": {
              "Name": "sskeu1_Master02_Node"
            },
            "tags_all": {
              "Name": "sskeu1_Master02_Node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0280e73b3c0102b0b"
            ]
          },
          "dependencies": [
            "aws_key_pair.sskeu1_prv_pub_key",
            "aws_security_group.sskeu1_Master_sg",
            "aws_subnet.sskeu1_pubsn_01",
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sskeu1_Worker01_Node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f540e9f488cfa27d",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-0c4baa9de514d5b5a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c4baa9de514d5b5a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "sskeu1_prv_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d24bcd61642908d0",
            "private_dns": "ip-10-0-1-70.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.70",
            "public_ip": "18.132.43.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c96d43ca5bee6ccb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09198194a91ba312e",
            "tags": {
              "Name": "sskeu1_Worker01_Node"
            },
            "tags_all": {
              "Name": "sskeu1_Worker01_Node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ee017a00e336ad6d"
            ]
          },
          "dependencies": [
            "aws_key_pair.sskeu1_prv_pub_key",
            "aws_security_group.sskeu1_Worker_sg",
            "aws_subnet.sskeu1_pubsn_01",
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sskeu1_Worker02_Node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f540e9f488cfa27d",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-048782af943bb1153",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-048782af943bb1153",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "sskeu1_prv_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e41674e068a58d5b",
            "private_dns": "ip-10-0-1-64.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.64",
            "public_ip": "35.177.104.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01753429fbbb63b4f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09198194a91ba312e",
            "tags": {
              "Name": "sskeu1_Worker02_Node"
            },
            "tags_all": {
              "Name": "sskeu1_Worker02_Node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ee017a00e336ad6d"
            ]
          },
          "dependencies": [
            "aws_key_pair.sskeu1_prv_pub_key",
            "aws_security_group.sskeu1_Worker_sg",
            "aws_subnet.sskeu1_pubsn_01",
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sskeu1_ansible_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f540e9f488cfa27d",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-0bc94f2f3f9b4ab2d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bc94f2f3f9b4ab2d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "sskeu1_prv_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01bb3d0aafe8fd643",
            "private_dns": "ip-10-0-1-179.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.179",
            "public_ip": "18.170.38.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d040fda666f46cd6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09198194a91ba312e",
            "tags": {
              "Name": "sskeu1_ansible_node"
            },
            "tags_all": {
              "Name": "sskeu1_ansible_node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-067f535ef3e69c180"
            ]
          },
          "dependencies": [
            "aws_key_pair.sskeu1_prv_pub_key",
            "aws_security_group.sskeu1_Ansible_sg",
            "aws_subnet.sskeu1_pubsn_01",
            "data.aws_instance.DS_master_01",
            "data.aws_instance.DS_master_02",
            "data.aws_instance.DS_worker_01",
            "data.aws_instance.DS_worker_02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sskeu1_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:internet-gateway/igw-03d9e7ebdb5a9aad5",
            "id": "igw-03d9e7ebdb5a9aad5",
            "owner_id": "803077056902",
            "tags": {
              "Name": "sskeu1_igw"
            },
            "tags_all": {
              "Name": "sskeu1_igw"
            },
            "vpc_id": "vpc-0c03e6277d9b52017"
          },
          "dependencies": [
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sskeu1_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066101ea7ec5d5312",
            "connectivity_type": "public",
            "id": "nat-0698da1609f411e62",
            "network_interface_id": "eni-06775e41b07f1e9b9",
            "private_ip": "10.0.1.119",
            "public_ip": "52.56.234.151",
            "subnet_id": "subnet-09198194a91ba312e",
            "tags": {
              "Name": "sskeu1_ngw"
            },
            "tags_all": {
              "Name": "sskeu1_ngw"
            }
          },
          "dependencies": [
            "aws_eip.sskeu1_nat_eip",
            "aws_internet_gateway.sskeu1_igw",
            "aws_subnet.sskeu1_pubsn_01",
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sskeu1_prv_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:route-table/rtb-07ae676f03074c8d7",
            "id": "rtb-07ae676f03074c8d7",
            "owner_id": "803077056902",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0698da1609f411e62",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sskeu1_prv_rt"
            },
            "tags_all": {
              "Name": "sskeu1_prv_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c03e6277d9b52017"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.sskeu1_nat_eip",
            "aws_internet_gateway.sskeu1_igw",
            "aws_nat_gateway.sskeu1_ngw",
            "aws_subnet.sskeu1_pubsn_01",
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sskeu1_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:route-table/rtb-0da2e3e4d252bda18",
            "id": "rtb-0da2e3e4d252bda18",
            "owner_id": "803077056902",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d9e7ebdb5a9aad5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sskeu1_pub_rt"
            },
            "tags_all": {
              "Name": "sskeu1_pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c03e6277d9b52017"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sskeu1_igw",
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sskeu1_prv01_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b7d7cf9031ec078",
            "route_table_id": "rtb-07ae676f03074c8d7",
            "subnet_id": "subnet-0993d451b4fddbdcd"
          },
          "dependencies": [
            "aws_eip.sskeu1_nat_eip",
            "aws_internet_gateway.sskeu1_igw",
            "aws_nat_gateway.sskeu1_ngw",
            "aws_route_table.sskeu1_prv_rt",
            "aws_subnet.sskeu1_prvsn_01",
            "aws_subnet.sskeu1_pubsn_01",
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sskeu1_prv02_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5e3f4190290ade1",
            "route_table_id": "rtb-07ae676f03074c8d7",
            "subnet_id": "subnet-0d50d640156e97643"
          },
          "dependencies": [
            "aws_eip.sskeu1_nat_eip",
            "aws_internet_gateway.sskeu1_igw",
            "aws_nat_gateway.sskeu1_ngw",
            "aws_route_table.sskeu1_prv_rt",
            "aws_subnet.sskeu1_prvsn_02",
            "aws_subnet.sskeu1_pubsn_01",
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sskeu1_prv03_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5b7e2dcc2803b08",
            "route_table_id": "rtb-07ae676f03074c8d7",
            "subnet_id": "subnet-097414111e038edb0"
          },
          "dependencies": [
            "aws_eip.sskeu1_nat_eip",
            "aws_internet_gateway.sskeu1_igw",
            "aws_nat_gateway.sskeu1_ngw",
            "aws_route_table.sskeu1_prv_rt",
            "aws_subnet.sskeu1_prvsn_03",
            "aws_subnet.sskeu1_pubsn_01",
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sskeu1_pub1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030b54d9e40242272",
            "route_table_id": "rtb-0da2e3e4d252bda18",
            "subnet_id": "subnet-09198194a91ba312e"
          },
          "dependencies": [
            "aws_internet_gateway.sskeu1_igw",
            "aws_route_table.sskeu1_pub_rt",
            "aws_subnet.sskeu1_pubsn_01",
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sskeu1_pub2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f35a4293f562ff55",
            "route_table_id": "rtb-0da2e3e4d252bda18",
            "subnet_id": "subnet-0ee86732f9a5f272f"
          },
          "dependencies": [
            "aws_internet_gateway.sskeu1_igw",
            "aws_route_table.sskeu1_pub_rt",
            "aws_subnet.sskeu1_pubsn_02",
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sskeu1_Ansible_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:security-group/sg-067f535ef3e69c180",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067f535ef3e69c180",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sskeu1_Ansible_sg",
            "name_prefix": "",
            "owner_id": "803077056902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sskeu1_Ansible_sg"
            },
            "tags_all": {
              "Name": "sskeu1_Ansible_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c03e6277d9b52017"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sskeu1_Bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:security-group/sg-006f599c9a71718e2",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006f599c9a71718e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sskeu1_Bastion_sg",
            "name_prefix": "",
            "owner_id": "803077056902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sskeu1_Bastion_sg"
            },
            "tags_all": {
              "Name": "sskeu1_Bastion_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c03e6277d9b52017"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sskeu1_LB_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:security-group/sg-0019c866e4c139cb5",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0019c866e4c139cb5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sskeu1_LB_sg",
            "name_prefix": "",
            "owner_id": "803077056902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sskeu1_LB_sg"
            },
            "tags_all": {
              "Name": "sskeu1_LB_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c03e6277d9b52017"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sskeu1_Master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:security-group/sg-0280e73b3c0102b0b",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0280e73b3c0102b0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sskeu1_Master_sg",
            "name_prefix": "",
            "owner_id": "803077056902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sskeu1_Naster_sg"
            },
            "tags_all": {
              "Name": "sskeu1_Naster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c03e6277d9b52017"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sskeu1_Worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:security-group/sg-0ee017a00e336ad6d",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee017a00e336ad6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sskeu1_Worker_sg",
            "name_prefix": "",
            "owner_id": "803077056902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sskeu1_Worker_sg"
            },
            "tags_all": {
              "Name": "sskeu1_Worker_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c03e6277d9b52017"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sskeu1_prvsn_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:subnet/subnet-0993d451b4fddbdcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0993d451b4fddbdcd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803077056902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sskeu1_prvsn_01"
            },
            "tags_all": {
              "Name": "sskeu1_prvsn_01"
            },
            "vpc_id": "vpc-0c03e6277d9b52017"
          },
          "dependencies": [
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sskeu1_prvsn_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:subnet/subnet-0d50d640156e97643",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d50d640156e97643",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803077056902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sskeu1_prvsn_02"
            },
            "tags_all": {
              "Name": "sskeu1_prvsn_02"
            },
            "vpc_id": "vpc-0c03e6277d9b52017"
          },
          "dependencies": [
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sskeu1_prvsn_03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:subnet/subnet-097414111e038edb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097414111e038edb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803077056902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sskeu1_prvsn_03"
            },
            "tags_all": {
              "Name": "sskeu1_prvsn_03"
            },
            "vpc_id": "vpc-0c03e6277d9b52017"
          },
          "dependencies": [
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sskeu1_pubsn_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:subnet/subnet-09198194a91ba312e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09198194a91ba312e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803077056902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sskeu1_pubsn_01"
            },
            "tags_all": {
              "Name": "sskeu1_pubsn_01"
            },
            "vpc_id": "vpc-0c03e6277d9b52017"
          },
          "dependencies": [
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sskeu1_pubsn_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:subnet/subnet-0ee86732f9a5f272f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee86732f9a5f272f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803077056902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sskeu1_pubsn_02"
            },
            "tags_all": {
              "Name": "sskeu1_pubsn_02"
            },
            "vpc_id": "vpc-0c03e6277d9b52017"
          },
          "dependencies": [
            "aws_vpc.sskeu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sskeu1_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:vpc/vpc-0c03e6277d9b52017",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-000c9e2de400061da",
            "default_route_table_id": "rtb-0de10e048c5030eb0",
            "default_security_group_id": "sg-07728d2dea290c67c",
            "dhcp_options_id": "dopt-0eceeeb0168d700fc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c03e6277d9b52017",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0de10e048c5030eb0",
            "owner_id": "803077056902",
            "tags": {
              "Name": "sskeu1_vpc"
            },
            "tags_all": {
              "Name": "sskeu1_vpc"
            }
          }
        }
      ]
    }
  ]
}